# multitarget

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
code/: Cargo.toml
load/: Cargo.toml
load/src/: main.rs
shim/: Cargo.toml
shim/src/: main.rs
